Remove blank stubs

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <p>This course will emphasize hands-on experience in the creation, management, and consumption of various computational services that support the practice of data science. For the purposes of getting started I will assume that you fit roughly into at least one of three categories as you approach the subject:</p>
 <ol>
   <li>Data Scientist / Researcher</li>
-  <li>Developer</li>
-  <li>Sysadmin / Engineer</li>
+  <li>Developer / CS</li>
+  <li>Data Engineer / Systems</li>
 </ol>
 <p>Students will learn how to implement data science systems according to best practices, with an emphasis upon creating reusable and portable environments.</p>
 
