--- a/schedule/index.html
+++ b/schedule/index.html
@@ -58,7 +58,7 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=nMyuCdqzpZc" target="_new">Netflix Data Analytics</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a>
+        <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> -->
       </td>
     </tr>
     <tr>
@@ -67,9 +67,9 @@
       <td>Data: Formats and Files</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
       </td>
     </tr>
     <tr>
@@ -78,9 +78,9 @@
       <td>Data: Scripting and Pipelines</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
       </td>
     </tr>
     <tr>
@@ -89,9 +89,9 @@
       <td>Consuming APIs</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
       </td>
     </tr>
     <tr>
@@ -100,9 +100,9 @@
       <td>Creating APIs</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
       </td>
     </tr>
     <tr>
@@ -111,9 +111,9 @@
       <td><b>NO LECTURE</b><br />Containers: Portable Applications</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
       </td>
     </tr>
     <tr>
@@ -122,9 +122,9 @@
       <td>Containers: Portable Applications</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
       </td>
     </tr>
     <tr>
@@ -133,9 +133,9 @@
       <td>SQL & Relational Database Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
       </td>
     </tr>
     <tr>
@@ -144,9 +144,9 @@
       <td>SQL & Relational Database Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Video Link</a> <br />
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://university.mongodb.com/courses/M100/about" target="_new">MongoDB</a>
+        <img src="../images/lab.png" /> <a href="https://university.mongodb.com/courses/M100/about" target="_new">MongoDB</a> -->
       </td>
     </tr>
     <tr>
@@ -156,8 +156,8 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
       </td>
     </tr>
     <tr>
@@ -166,9 +166,9 @@
       <td>NoSQL & Unstructured Data Services<br /><b>NO DISCUSSION</b></td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
       </td>
     </tr>
     <tr>
@@ -177,9 +177,9 @@
       <td>Cloud Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
       </td>
     </tr>
     <tr>
@@ -188,9 +188,9 @@
       <td>Cloud Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a>
+        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
       </td>
     </tr>
     <tr>
