--- a/schedule/index.html
+++ b/schedule/index.html
@@ -54,7 +54,7 @@
     <tr>
       <td>01</td>
       <td>2/1/2021</td>
-      <td>Course introduction: It's All About Data</td>
+      <td>Course introduction: Basics of Data Engineering</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=nMyuCdqzpZc" target="_new">Netflix Data Analytics</a> <br />
