Remove blank stubs

--- a/labs/index.html
+++ b/labs/index.html
@@ -36,114 +36,10 @@
     <tr>
       <th>#</th>
       <th>Topics(s)</th>
-      <th style="width:40%;">Read / Watch / Do</th>
+      <th style="width:40%;">Do / Practice</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>01</td>
-      <td>Course introduction, concepts</td>
-
-      <td>
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">GCP Overview</a>
-      </td>
-    </tr>
-    <tr>
-      <td>02</td>
-      <td>Virtualization, Managed Services, Cost</td>
-
-      <td>
-        <img src="../images/lab.png" /> <a href="https://l.uvarc.io/cost-lab">Lab: Cost Control</a>
-      </td>
-    </tr>
-    <tr>
-      <td>03</td>
-      <td>Building Blocks I: VPCs, Networking, IAM, Security</td>
-
-      <td>
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/10408?parent=catalog" target="_new">Lab: IAM Security</a>
-      </td>
-    </tr>
-    <tr>
-      <td>04</td>
-      <td>Building Blocks II: Strorage & Caching</td>
-
-      <td>
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/10927?catalog_rank=%7B%22rank%22%3A7%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=6377673" target="_new">Lab: AWS CloudFront</a>
-      </td>
-    </tr>
-    <tr>
-      <td>05</td>
-      <td>Building Blocks III: Virtual instances, Machine Images, Bootstrapping</td>
-
-      <td>
-        <img src="../images/lab.png" /> <a href="https://l.uvarc.io/bootstrap">Lab: Bootstrap EC2</a>
-      </td>
-    </tr>
-    <tr>
-      <td>06</td>
-      <td>DevOps, SDKs & CI/CD</td>
-
-      <td>
-        <img src="../images/lab.png" /> <a href="https://l.uvarc.io/boto3-lab">Lab: <code>boto3</code> SDK</a>
-      </td>
-    </tr>
-    <tr>
-      <td>07</td>
-      <td>Designing Apps for the Cloud</td>
-
-      <td>
-        <img src="../images/lab.png" /> <a href="https://www.wellarchitectedlabs.com/">Lab: AWS Well-Architected</a>
-      </td>
-    </tr>
-    <tr>
-      <td>08</td>
-      <td>Scaling / Right-sizing / Management</td>
-
-      <td>
-        <img src="../images/lab.png" /> <a href="https://docs.aws.amazon.com/autoscaling/ec2/userguide/as-register-lbs-with-asg.html#as-register-lbs-console" target="_new">Lab: EC2 Autoscaling</a>
-      </td>
-    </tr>
-    <tr>
-      <td><a name="microservices">09</a></td>
-      <td>Microservices</td>
-
-      <td>
-        <img src="../images/lab.png" /> <a href="microservices.html">Lab: Docker 101</a>
-      </td>
-    </tr>
-    <tr>
-      <td>10</td>
-      <td>Serverless & Event-driven Computing</td>
-
-      <td>
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/10541?parent=catalog" target="_new">Lab: AWS Lambda</a>
-      </td>
-    </tr>
-    <tr>
-      <td>11</td>
-      <td>Cloud Databases</td>
-
-      <td>
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/10407?parent=catalog" target="_new">Lab: AWS DynamoDB</a>
-      </td>
-    </tr>
-    <tr>
-      <td>12</td>
-      <td>Really Big Data</td>
-
-      <td>
-        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/13055?catalog_rank=%7B%22rank%22%3A119%2C%22num_filters%22%3A0%2C%22has_search%22%3Afalse%7D&parent=catalog" target="_new">Lab: AWS Redshift</a>
-      </td>
-    </tr>
-    <tr>
-      <td>13</td>
-      <td>Other Topics: ML / AI / IoT / Edge</td>
-
-      <td>
-        <img src="../images/lab.png" /> Lab: IoT Streams
-      </td>
-    </tr>
     <tr>
       <td></td>
       <td><strong>More Labs</strong></td>
@@ -156,8 +52,11 @@
         <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/577?parent=catalog&utm_source=gcp&utm_campaign=freelabs&utm_medium=site" target="_new">Lab: GCP BigQuery</a> <br />
         <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/10383?catalog_rank=%7B%22rank%22%3A55%2C%22num_filters%22%3A0%2C%22has_search%22%3Afalse%7D&parent=catalog" target="_new">Lab: AWS API Gateway</a> <br />
         <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/10388?catalog_rank=%7B%22rank%22%3A66%2C%22num_filters%22%3A0%2C%22has_search%22%3Afalse%7D&parent=catalog" target="_new">Lab: AWS Key Management Service</a> <br />
-        <img src="../images/lab.png" /> <a href="">Lab: AWS AI Services</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.educative.io/explore" target="_new">Labs @ Educative</a> <br />
+        <img src="../images/lab.png" /> <a href="https://l.uvarc.io/boto3-lab">Lab: <code>boto3</code> SDK</a> <br />
+        <img src="../images/lab.png" /> <a href="microservices.html">Lab: Docker 101</a> <br />
+        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/10541?parent=catalog" target="_new">Lab: AWS Lambda</a> <br />
+        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/10407?parent=catalog" target="_new">Lab: AWS DynamoDB</a> <br />
+        <img src="../images/lab.png" /> <a href="https://amazon.qwiklabs.com/focuses/13055?catalog_rank=%7B%22rank%22%3A119%2C%22num_filters%22%3A0%2C%22has_search%22%3Afalse%7D&parent=catalog" target="_new">Lab: AWS Redshift</a>
       </td>
     </tr>
     <tr>
@@ -167,6 +66,7 @@
         <img src="../images/lab.png" /> <a href="https://docs.microsoft.com/en-us/learn/azure/?tab=tab-learn-for-free" target="_new" style="font-weight:bold;">Azure Learning Paths</a> <br />
         <img src="../images/lab.png" /> <a href="https://cloud.google.com/training/" target="_new" style="font-weight:bold;">Google Cloud Training</a> <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/" target="_new" style="font-weight:bold;">AWS Hands-On Tutorials</a> <br />
+        <img src="../images/lab.png" /> <a href="https://www.educative.io/explore" target="_new">Labs @ Educative</a> <br />
       </td>
     </tr>
   </tbody>
