--- a/schedule/index.html
+++ b/schedule/index.html
@@ -64,7 +64,7 @@
     <tr>
       <td>02</td>
       <td>2/8/2021</td>
-      <td>Data: Formats and Files</td>
+      <td>Data: Formats, Files, Types & Structures</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -75,7 +75,7 @@
     <tr>
       <td>03</td>
       <td>2/15/2021</td>
-      <td>Data: Scripting and Pipelines</td>
+      <td>Data: Scripting, Pipelines, and Automation</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
