--- a/labs/microservices.html
+++ b/labs/microservices.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>CS4740 Cloud Computing - Microservices / Docker 101</title>
+    <title>DS3002 Data Science Systems - Microservices / Docker 101</title>
 
-    <link rel="stylesheet" href="https://nmagee.github.io/cs4740/stylesheets/styles.css">
-    <link rel="stylesheet" href="https://nmagee.github.io/cs4740/stylesheets/github-light.css">
+    <link rel="stylesheet" href="https://nmagee.github.io/ds3002/stylesheets/styles.css">
+    <link rel="stylesheet" href="https://nmagee.github.io/ds3002/stylesheets/github-light.css">
     <link rel="Shortcut Icon" href="https://www.rc.virginia.edu/images/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
@@ -22,13 +22,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://nmagee.github.io/cs4740/" style="color:black;text-decoration:none;">CS4740 Cloud Computing</a></h1>
+        <h1><a href="https://nmagee.github.io/ds3002/" style="color:black;text-decoration:none;">DS3002 Data Science Systems</a></h1>
         <p>Neal Magee, Ph.D.<br />Solution Architect, Research Computing<br />University of Virginia, Fall 2020</p>
 
         <div style="min-height:2rem;"></div>
 
         <ul>
-          <li><a href="https://nmagee.github.io/cs4740/">Return to the<strong>Syllabus</strong></a></li>
+          <li><a href="https://nmagee.github.io/ds3002/">Return to the<strong>Syllabus</strong></a></li>
           <li><a href="https://l.uvarc.io/youtube-lectures" target="_new">View lectures<strong>YouTube</strong></a></li>
           <li><a href="https://l.uvarc.io/discord">Discussions on <strong>Discord</strong></a></li>
         </ul>
@@ -74,7 +74,7 @@ Hungry for more Docker labs? Try <a href="https://training.play-with-docker.com/
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="https://nmagee.github.io/cs4740/javascripts/scale.fix.js"></script>
+    <script src="https://nmagee.github.io/ds3002/javascripts/scale.fix.js"></script>
     
   </body>
 </html>
