--- a/schedule/index.html
+++ b/schedule/index.html
@@ -130,7 +130,7 @@
     <tr>
       <td>08</td>
       <td>3/22/2021</td>
-      <td>SQL & Relational Databases</td>
+      <td>SQL & Structured Data</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -142,7 +142,7 @@
     <tr>
       <td>09</td>
       <td>3/29/2021</td>
-      <td>SQL & Relational Databases</td>
+      <td>SQL & Relational Database Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Video Link</a> <br />
@@ -164,7 +164,7 @@
     <tr>
       <td>11</td>
       <td>4/12/2021</td>
-      <td>NoSQL & Unstructured Data<br /><b>NO DISCUSSION</b></td>
+      <td>NoSQL Database Services<br /><b>NO DISCUSSION</b></td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
