--- a/schedule/index.html
+++ b/schedule/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1><a href="https://nmagee.github.io/ds3002/" style="color:black;text-decoration:none;">DS3002 Data Science Systems</a></h1>
-        <p>Neal Magee, Ph.D.<br />Solution Architect, Research Computing<br />University of Virginia, Fall 2020</p>
+        <p>Neal Magee, Ph.D.<br />Solution Architect, Research Computing<br />University of Virginia, Spring 2021</p>
 
         <div style="min-height:2rem;"></div>
 
