--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 <h2>
   <a id="office-hours" name="office-hours" class="anchor" href="#office-hours" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Office Hours</h2>
-  <p>Given this course is entirely online and most interactions will occur within the course Discord server, no formal office hours will be scheduled. Post your questions to the <code>#questions</code> channel, or message the instructor directly. We will do our best to reply to all questions within a few hours. </p>
+  <p>Given that this course is entirely online and most interactions will occur within the course Discord server, no formal office hours will be scheduled. Post your questions to the <code>#questions</code> channel, or message the instructor or TA directly. We will do our best to reply to all questions within a few hours. </p>
 
 <h2>
 <a id="tools" name="tools" class="anchor" href="#tools" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tools</h2>
