--- a/schedule/index.html
+++ b/schedule/index.html
@@ -91,6 +91,7 @@
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
+        <img src="../images/lab.png" /> <a href="" target="_new">GitHub API</a> <br />
         <img src="../images/lab.png" /> <a href="" target="_new">Amazon S3</a>
       </td>
     </tr>
