--- a/schedule/index.html
+++ b/schedule/index.html
@@ -54,6 +54,7 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=nMyuCdqzpZc" target="_new">Netflix Data Analytics</a> <br />
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=jWpI8qzqNHk" target="_new">Vizceral Traffic Intuition</a> <br />
         <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> -->
       </td>
     </tr>
@@ -109,8 +110,8 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
+        <img src="../images/lab.png" /> <a href="../labs/microservices.html" target="_new">Docker 101</a>
       </td>
     </tr>
     <tr>
