--- a/schedule/index.html
+++ b/schedule/index.html
@@ -54,8 +54,7 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=nMyuCdqzpZc" target="_new">Netflix Data Analytics</a> <br />
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=jWpI8qzqNHk" target="_new">Vizceral Traffic Intuition</a> <br />
-        <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> -->
+        <img src="../images/book.png" /> <a href="https://www.xplenty.com/blog/data-engineering-what-does-a-data-engineer-do-how-do-i-become-one/" target="_new">What is Data Engineering?</a>
       </td>
     </tr>
     <tr>
@@ -64,9 +63,11 @@
       <td>Data: Formats, Files, Types & Structures</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=jWpI8qzqNHk" target="_new">Vizceral Traffic Intuition</a> <br />
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> -->
+        <img src="../images/lab.png" /> <a href="" target="_new">Amazon S3</a> <br />
       </td>
     </tr>
     <tr>
@@ -77,7 +78,8 @@
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
-        <img src="../images/book.png" /> <a href="https://docs.gitlab.com/ee/ci/pipelines/" target="_new">GitLab Pipelines</a>
+        <img src="../images/book.png" /> <a href="https://docs.gitlab.com/ee/ci/pipelines/" target="_new">GitLab Pipelines</a> <br />
+        <img src="../images/lab.png" /> <a href="" target="_new">AWS S3 + Lambda</a> <br />
       </td>
     </tr>
     <tr>
@@ -89,7 +91,6 @@
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/lab.png" /> <a href="" target="_new">GitHub API</a> <br />
-        <img src="../images/lab.png" /> <a href="" target="_new">Amazon S3</a>
       </td>
     </tr>
     <tr>
@@ -98,9 +99,9 @@
       <td>Creating APIs</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
-        <img src="../images/lab.png" /> <a href="" target="_new">Publish an API</a>
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
+        <img src="../images/book.png" /> <a href="https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-i-hello-world" target="_new">Miguel Grinberg: Flask APIs</a> <br />
+        <img src="../images/lab.png" /> <a href="" target="_new">Publish an API to Lightsail</a>
       </td>
     </tr>
     <tr>
@@ -155,6 +156,7 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler</a> <br />
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=egsQ3QRT_Xc&feature=youtu.be" target="_new">MongoDB in 5 Minutes</a> <br />
         <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">CRUD using DynamoDB</a>
       </td>
