--- a/index.html
+++ b/index.html
@@ -85,13 +85,18 @@
     </tr>
     <tr>
       <td><a href="">Labs</a></td>
-      <td>30%</td>
+      <td>20%</td>
       <td>Weekly before class discussion</td>
     </tr>
     <tr>
       <td>Discussions</td>
-      <td>20%</td>
+      <td></td>
       <td>Every THURSDAY 11:00am-12:00pm EDT</td>
+    </tr>
+    <tr>
+      <td>Quizzes</td>
+      <td>30%</td>
+      <td>6 quizzes / 5 points each</td>
     </tr>
     <tr>
       <td>Data Projects</td>
