--- a/schedule/index.html
+++ b/schedule/index.html
@@ -101,7 +101,8 @@
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
         <img src="../images/book.png" /> <a href="https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-i-hello-world" target="_new">Miguel Grinberg: Flask APIs</a> <br />
-        <img src="../images/lab.png" /> <a href="" target="_new">Publish an API to Lightsail</a>
+        <img src="../images/lab.png" /> <a href="" target="_new">Publish an API to Lightsail</a> <br />
+        <img src="../images/lab.png" /> <a href="" target="_new">Publish an API using Chalice</a> <br />
       </td>
     </tr>
     <tr>
