--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </tr>
     <tr>
       <td><a href="">Labs</a></td>
-      <td>20%</td>
+      <td>30%</td>
       <td>Weekly before class discussion</td>
     </tr>
     <tr>
@@ -95,8 +95,8 @@
     </tr>
     <tr>
       <td>Quizzes</td>
-      <td>30%</td>
-      <td>6 quizzes / 5 points each</td>
+      <td>20%</td>
+      <td>4 quizzes / 5 points each</td>
     </tr>
     <tr>
       <td>Data Projects</td>
@@ -111,7 +111,7 @@
   <li><b>Lectures / Reading / Viewing</b> - Will be posted beforehand. Though not a graded portion of the course, lectures, readings and supporting videos have been carefully selected to introduce and explain important concepts to you. Should you not digest these you will likely not perform well in the course. Lectures and all links will remain posted for the entire semester.
   <li><b>Labs</b> - are an important way for you to interact with an actual public cloud provider. In most cases this will be Amazon Web Services. Labs will either be hosted in Qwiklabs (and incur no charges in your own AWS account) or are designed to cost very little if performed in your account (a couple of dollars at most).
   <li><b>Discussions</b> - are the only synchronous element of this course, and will be held weekly on Thursdays at 11am Eastern Time. Please join the discord channel and bring your questions! Discussion may be accompanied by live Zoom.
-  <li><b>Quizzes</b> -  will be short, multiple-choice assessments of your understanding of the material. These will generally be given every other week during the semester.
+  <li><b>Quizzes</b> -  will be short, multiple-choice assessments of your understanding of the material. These will generally be given periodically during the semester.
   <li><b>Data Projects</b> - are graded assignments that implement your understanding of course material. PAs will be posted one week before due. There is no time limit on PAs but they must be completed alone, without support of other students or outsiders. Given the full week allowed to work on these assignments, late work will not be accepted.
 </ul>
 
