--- a/schedule/index.html
+++ b/schedule/index.html
@@ -60,7 +60,7 @@
     <tr>
       <td>02</td>
       <td>2/8/2021</td>
-      <td>Data: Formats, Files, Types & Structures</td>
+      <td>Data: Storage & Shipping</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=jWpI8qzqNHk" target="_new">Vizceral Traffic Intuition</a> <br />
@@ -108,7 +108,7 @@
     <tr>
       <td>06</td>
       <td>3/8/2021</td>
-      <td><b>NO LECTURE</b><br />Containers: Portable Applications</td>
+      <td><b>NO LECTURE</b><br />Containers: Buidling</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -119,7 +119,7 @@
     <tr>
       <td>07</td>
       <td>3/15/2021</td>
-      <td>Containers: Portable Applications</td>
+      <td>Containers: Deploying</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -130,7 +130,7 @@
     <tr>
       <td>08</td>
       <td>3/22/2021</td>
-      <td>SQL & Structured Data</td>
+      <td>SQL & Relational Database Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
