Extending the schedule

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <tr>
       <td><a href="">Labs</a></td>
       <td>30%</td>
-      <td>Weekly before class discussion</td>
+      <td>Select 10 through the semester / 3 points each</td>
     </tr>
     <tr>
       <td>Discussions</td>
@@ -101,7 +101,7 @@
     <tr>
       <td>Data Projects</td>
       <td>50%</td>
-      <td>2 projects</td>
+      <td>2 projects / 25 points each</td>
     </tr>
   </tbody>
 </table>
@@ -109,7 +109,7 @@
 <ul>
   <li><b>Student Survey</b> - a simple questionnaire for me to ascertain baseline skills for the class and students' familiarity with a variety of tools and concepts.
   <li><b>Lectures / Reading / Viewing</b> - Will be posted beforehand. Though not a graded portion of the course, lectures, readings and supporting videos have been carefully selected to introduce and explain important concepts to you. Should you not digest these you will likely not perform well in the course. Lectures and all links will remain posted for the entire semester.
-  <li><b>Labs</b> - are an important way for you to interact with an actual public cloud provider. In most cases this will be Amazon Web Services. Labs will either be hosted in Qwiklabs (and incur no charges in your own AWS account) or are designed to cost very little if performed in your account (a couple of dollars at most).
+  <li><b>Labs</b> - are an important way for you to interact with tools and cloud services. In most cases these will be in Amazon Web Services or Google Cloud Platform. Labs will either be hosted in Qwiklabs (and incur no charges in your own AWS account) or are designed to cost very little if performed in your account (a couple of dollars at most). Students should select 10 labs through the semester to submit for credit.
   <li><b>Discussions</b> - are the only synchronous element of this course, and will be held weekly on Thursdays at 11am Eastern Time. Please join the discord channel and bring your questions! Discussion may be accompanied by live Zoom.
   <li><b>Quizzes</b> -  will be short, multiple-choice assessments of your understanding of the material. These will generally be given periodically during the semester.
   <li><b>Data Projects</b> - are graded assignments that implement your understanding of course material. PAs will be posted one week before due. There is no time limit on PAs but they must be completed alone, without support of other students or outsiders. Given the full week allowed to work on these assignments, late work will not be accepted.
