--- a/schedule/index.html
+++ b/schedule/index.html
@@ -54,20 +54,22 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=nMyuCdqzpZc" target="_new">Netflix Data Analytics</a> <br />
-        <img src="../images/book.png" /> <a href="https://www.xplenty.com/blog/data-engineering-what-does-a-data-engineer-do-how-do-i-become-one/" target="_new">What is Data Engineering?</a>
+        <img src="../images/book.png" /> <a href="https://www.xplenty.com/blog/data-engineering-what-does-a-data-engineer-do-how-do-i-become-one/" target="_new">What is Data Engineering?</a> <br />
+        <img src="../images/check.png" /> <a href="" target="_new">Setup: AWS Account / Budgets</a> <br />
+        <img src="../images/check.png" /> <a href="" target="_new">Setup: AWS Keys / CLI</a> <br />
       </td>
     </tr>
     <tr>
       <td>02</td>
       <td>2/8/2021</td>
-      <td>Data: Storage & Shipping</td>
+      <td>Data: Storage & Management</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=jWpI8qzqNHk" target="_new">Vizceral Traffic Intuition</a> <br />
-        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> -->
+        <img src="../images/book.png" /> <a href="https://towardsdatascience.com/everything-a-data-scientist-should-know-about-data-management-6877788c6a42" target="_new">Data Management</a> <br />
+        <img src="../images/book.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> <br />
         <img src="../images/lab.png" /> <a href="" target="_new">Amazon S3</a> <br />
+        <img src="../images/lab.png" /> <a href="" target="_new">Google Storage</a> <br />
       </td>
     </tr>
     <tr>
@@ -101,7 +103,6 @@
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
         <img src="../images/book.png" /> <a href="https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-i-hello-world" target="_new">Miguel Grinberg: Flask APIs</a> <br />
-        <img src="../images/lab.png" /> <a href="" target="_new">Publish an API to Lightsail</a> <br />
         <img src="../images/lab.png" /> <a href="" target="_new">Publish an API using Chalice</a> <br />
       </td>
     </tr>
@@ -123,8 +124,8 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
-        <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
+        <img src="../images/lab.png" /> <a href="" target="_new">Publish a Container to Lightsail</a> <br />
       </td>
     </tr>
     <tr>
@@ -202,7 +203,13 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td> </td>
     </tr>
-
+    <tr>
+      <td></td>
+      <td>5/3/2021</td>
+      <td><b>Final Data Project Due</b></td>
+      <td></td>
+      <td> </td>
+    </tr>
   </tbody>
 </table>
 
