Extending the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -109,7 +109,7 @@
     <tr>
       <td>06</td>
       <td>3/8/2021</td>
-      <td><b>NO LECTURE</b><br />Containers: Buidling</td>
+      <td><b>NO LECTURE</b><br />Containers: Building</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -150,6 +150,13 @@
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br />
         <img src="../images/lab.png" /> <a href="https://google.qwiklabs.com/focuses/2794?parent=catalog" target="_new">Lab Link</a> -->
       </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>4/2/2021</td>
+      <td><b>First Data Project Due</b></td>
+      <td></td>
+      <td> </td>
     </tr>
     <tr>
       <td>10</td>
@@ -205,7 +212,7 @@
     </tr>
     <tr>
       <td></td>
-      <td>5/3/2021</td>
+      <td>5/10/2021</td>
       <td><b>Final Data Project Due</b></td>
       <td></td>
       <td> </td>
