Extending the schedule

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 <p>This course will center on exposing students to contemporary pipelines for data analysis through a series of steadily escalating use cases. The course will begin with simple local database construction and evolve to cloud-based infrastructure such as AWS or Google Cloud. This progression will include learning a variety of systems for data collection, orchestration, transformation, consumption, and others as appropriate.</p>
 
 <ul>
-  <li><a href="#participation" style="text-decoration:none;color:black;">Participation</a></li>
   <li><a href="#audience" style="text-decoration:none;color:black;">Audience</a></li>
   <li><a href="#grading" style="text-decoration:none;color:black;">Grading</a></li>
   <li><a href="#office-hours" style="text-decoration:none;color:black;">Office Hours</a></li>  
@@ -43,8 +42,6 @@
   <li><a href="#contact" style="text-decoration:none;color:black;">Support or Contact</a></li>
 </ul>
 
-
-<h2><a id="participation" class="anchor" href="#participation" name="participation"  aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Participation</h2>
 <div style="padding:2rem 2rem 0rem 2rem;border:solid 1px #ccc;background-color:#dff0d8;margin-bottom:2rem;">
   <h3 style="font-size:120%;">Spring 2021 - This course will be held entirely online</h3>
   <p>This course is being offered <strong>ONLINE SYNCHRONOUSLY</strong>. Most lectures will be video streams to be watched whenever the student chooses.
@@ -109,7 +106,7 @@
 <ul>
   <li><b>Student Survey</b> - a simple questionnaire for me to ascertain baseline skills for the class and students' familiarity with a variety of tools and concepts.
   <li><b>Lectures / Reading / Viewing</b> - Will be posted beforehand. Though not a graded portion of the course, lectures, readings and supporting videos have been carefully selected to introduce and explain important concepts to you. Should you not digest these you will likely not perform well in the course. Lectures and all links will remain posted for the entire semester.
-  <li><b>Labs</b> - are an important way for you to interact with tools and cloud services. In most cases these will be in Amazon Web Services or Google Cloud Platform. Labs will either be hosted in Qwiklabs (and incur no charges in your own AWS account) or are designed to cost very little if performed in your account (a couple of dollars at most). Students should select 10 labs through the semester to submit for credit.
+  <li><b>Labs</b> - are an important way for you to interact with tools and cloud services. In most cases these will be in Amazon Web Services or Google Cloud Platform. Labs will either be hosted in Qwiklabs (and incur no charges in your own AWS account) or are designed to cost very little if performed in your account (a couple of dollars at most). Students are encouraged to complete as many labs as possible in order to gain competency in the subject matter. Students are required to complete at least 10 labs for credit.
   <li><b>Discussions</b> - are the only synchronous element of this course, and will be held weekly on Thursdays at 11am Eastern Time. Please join the discord channel and bring your questions! Discussion may be accompanied by live Zoom.
   <li><b>Quizzes</b> -  will be short, multiple-choice assessments of your understanding of the material. These will generally be given periodically during the semester.
   <li><b>Data Projects</b> - are graded assignments that implement your understanding of course material. PAs will be posted one week before due. There is no time limit on PAs but they must be completed alone, without support of other students or outsiders. Given the full week allowed to work on these assignments, late work will not be accepted.
