--- a/schedule/index.html
+++ b/schedule/index.html
@@ -156,7 +156,7 @@
       <td>4/2/2021</td>
       <td><b>First Data Project Due</b></td>
       <td></td>
-      <td> </td>
+      <td>See prompt</td>
     </tr>
     <tr>
       <td>10</td>
@@ -215,7 +215,7 @@
       <td>5/10/2021</td>
       <td><b>Final Data Project Due</b></td>
       <td></td>
-      <td> </td>
+      <td>See prompt</td>
     </tr>
   </tbody>
 </table>
