Extending the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -109,7 +109,7 @@
     <tr>
       <td>06</td>
       <td>3/8/2021</td>
-      <td><b>NO LECTURE</b><br />Containers: Building</td>
+      <td><b>NO LECTURE 3/9/2021</b><br />Containers: Building</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
@@ -173,7 +173,7 @@
     <tr>
       <td>11</td>
       <td>4/12/2021</td>
-      <td>NoSQL Database Services<br /><b>NO DISCUSSION</b></td>
+      <td>NoSQL Database Services<br /><b>NO DISCUSSION 4/15/2021</b></td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
