--- a/schedule/index.html
+++ b/schedule/index.html
@@ -112,8 +112,8 @@
       <td><b>NO LECTURE 3/9/2021</b><br />Containers: Building</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=gBalsA-x300" target="_new">Docker for Data Science</a> <br />
+        <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/lab.png" /> <a href="../labs/microservices.html" target="_new">Docker 101</a>
       </td>
     </tr>
