--- a/schedule/index.html
+++ b/schedule/index.html
@@ -81,7 +81,7 @@
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/book.png" /> <a href="https://docs.gitlab.com/ee/ci/pipelines/" target="_new">GitLab Pipelines</a> <br />
-        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/process-video-jobs-with-aws-batch-on-aws-step-functions/" target="_new">AWS Batch</a> <br /> <br />
+        <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/process-video-jobs-with-aws-batch-on-aws-step-functions/" target="_new">AWS Batch</a> <br /> 
         <img src="../images/lab.png" /> <a href="" target="_new">AWS S3 + Lambda</a> <br /> <br />        
       </td>
     </tr>
