Extending the schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -82,7 +82,7 @@
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/book.png" /> <a href="https://docs.gitlab.com/ee/ci/pipelines/" target="_new">GitLab Pipelines</a> <br />
         <img src="../images/lab.png" /> <a href="https://aws.amazon.com/getting-started/hands-on/process-video-jobs-with-aws-batch-on-aws-step-functions/" target="_new">AWS Batch</a> <br /> 
-        <img src="../images/lab.png" /> <a href="" target="_new">AWS S3 + Lambda</a> <br /> <br />        
+        <img src="../images/lab.png" /> <a href="" target="_new">AWS S3 + Lambda</a> <br />
       </td>
     </tr>
     <tr>
