--- a/schedule/index.html
+++ b/schedule/index.html
@@ -113,7 +113,7 @@
       <td><b>NO LECTURE 3/9/2021</b><br />Containers: Building</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=gBalsA-x300" target="_new">Docker for Data Science</a> <br />
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=axKZpNfQXmg" target="_new">Container Workflows for Data Science</a> <br />
         <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/lab.png" /> <a href="" target="_new">Docker Lab</a>
       </td>
