--- a/schedule/index.html
+++ b/schedule/index.html
@@ -65,7 +65,7 @@
       <td>Data: Storage & Management</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=jWpI8qzqNHk" target="_new">Vizceral Traffic Intuition</a> <br />
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=LeCJaTfEnEw" target="_new">Data Lakes & Analytics</a> <br />
         <img src="../images/book.png" /> <a href="https://towardsdatascience.com/everything-a-data-scientist-should-know-about-data-management-6877788c6a42" target="_new">Data Management</a> <br />
         <img src="../images/book.png" /> <a href="https://www.kaggle.com/learn/data-cleaning" target="_new">Data Cleaning</a> <br />
         <img src="../images/lab.png" /> <a href="" target="_new">Amazon S3</a> <br />
